adding last part of the site

--- a/index.html
+++ b/index.html
@@ -345,6 +345,10 @@
                 </div>
 
             </div>
+            <div class="see">
+                <h2>See More</h2>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
 
 
 
@@ -352,11 +356,49 @@
 
 
 
+        <!-- Featured part  -->
+
+        <div class="featured-container">
+            <div class="feature-image">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="feature-content">
+                <h1 class="feature-title">
+                    Featured products at one place
+                </h1>
+                <p class="feature-para">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button class="feature-btn">
+                    Join Now
+                    <i class="fa-solid fa-arrow-right"></i>  
+
+                </button>
 
 
-
-
+            </div>
+        </div>
     </main>
+<!-- Footer starts here  -->
+    <footer>
+        <div class="footer-container">
+            <h1 class="footer-title">
+                Influencer products 
+            </h1>
+            <p class="footer-para">
+                Copyright © 2020  influencer products <br>
+                All rights reserved
+            </p>
+            <div class="f-icon">
+                <i class="fa-brands fa-instagram footer-icon"></i>
+                <i class="fa-solid fa-basketball footer-icon"></i>
+                <i class="fa-brands fa-square-twitter footer-icon"></i>
+                <i class="fa-brands fa-youtube footer-icon"></i>
+
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 
