--- a/index.html
+++ b/index.html
@@ -389,11 +389,11 @@
                 Copyright © 2020  influencer products <br>
                 All rights reserved
             </p>
-            <div class="f-icon">
-                <i class="fa-brands fa-instagram footer-icon"></i>
-                <i class="fa-solid fa-basketball footer-icon"></i>
-                <i class="fa-brands fa-square-twitter footer-icon"></i>
-                <i class="fa-brands fa-youtube footer-icon"></i>
+            <div class="footer-icon">
+                <i class="fa-brands fa-instagram g-con"></i>
+                <i class="fa-solid fa-basketball g-con"></i>
+                <i class="fa-brands fa-square-twitter g-con"></i>
+                <i class="fa-brands fa-youtube g-con"></i>
 
             </div>
         </div>
